[gd_scene load_steps=4 format=3 uid="uid://dit0hekfpg2eq"]

[ext_resource type="Script" path="res://src/ui/components/character_card.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.2, 0.2, 0.3, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
bg_color = Color(0.3, 0.5, 0.7, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="CharacterCard" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 200.0
offset_bottom = 300.0
script = ExtResource("1")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="SelectedBackground" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = SubResource("StyleBoxFlat_2")
visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0

[node name="Portrait" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(128, 128)
expand_mode = 1
stretch_mode = 5

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "角色名稱"
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1

[node name="DescriptionLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "角色描述"
autowrap_mode = 3
horizontal_alignment = 1

[node name="StatsContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HealthLabel" type="Label" parent="VBoxContainer/StatsContainer"]
layout_mode = 2
text = "生命值: 100"

[node name="SpeedLabel" type="Label" parent="VBoxContainer/StatsContainer"]
layout_mode = 2
text = "速度: 300"

[node name="DamageLabel" type="Label" parent="VBoxContainer/StatsContainer"]
layout_mode = 2
text = "傷害: 100%"

[node name="ButtonsContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="SelectButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "選擇"

[node name="UnlockButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "解鎖 (500 金幣)"
visible = false

[node name="LockedLabel" type="Label" parent="VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "未解鎖"
horizontal_alignment = 1
visible = false